# solara-examples

./: .gitignore  README.md
bulk-labeling/: CONTRIBUTING.md  README.md  Untitled.ipynb  pyproject.toml  setup.cfg  setup.py
bulk-labeling/bulk_labeling/: label_stats.py  main.py  state.py
bulk-labeling/bulk_labeling/components/: df.py  menu.py
bulk-labeling/bulk_labeling/utils/: common.py  df.py  menu.py  ml.py  plotly.py
bulk-labeling/scripts/: format.sh  lint.sh
chatgpt/: README.md  requirements.txt
chatgpt/chatgpt/: chat.py  main.py  style.py
gpt/: GPT App.ipynb  README.md  requirements.txt  setup.py
gpt/gpt/: app.py  state.py  style.py  utils.py
huggingface-card-viewer/: README.md  requirements.txt  setup.py
huggingface-card-viewer/card_viewer/: app.py  utils.py
spans-to-tokens/: requirements.txt
spans-to-tokens/spans_to_tokens/: app.py
